--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "chess.js": "^0.12.1",
     "expo": "~44.0.0",
     "expo-status-bar": "~1.2.0",
-    "react": "17.0.1",
+    "react": "^17.0.1",
+    "react-chessboard": "^1.0.5",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-web": "0.17.1"
