--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "bootstrap": "^5.1.3",
     "chess.js": "^0.12.1",
     "expo": "~44.0.0",
     "expo-status-bar": "~1.2.0",
     "react": "^17.0.1",
+    "react-bootstrap": "^2.1.2",
     "react-chessboard": "^1.0.5",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
