--- a/app.json
+++ b/app.json
@@ -4,9 +4,9 @@
     "slug": "ga",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/GA.svg",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/GA.svg",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -26,7 +26,7 @@
       }
     },
     "web": {
-      "favicon": "./assets/favicon.png"
+      "favicon": "./assets/GA.png"
     }
   }
 }
